# ferie_walter

./: Cargo.toml  Project_FERIE_WALTER_GRIGLIA.sublime-workspace  README.MD  Trunk.toml  dipendenti.json
assets/: sw.js
ferie_walter/: Cargo.toml  Trunk.toml  index.html
ferie_walter/src/control/: date.rs
ferie_walter/src/entity/: anno.rs  errori.rs
ferie_walter/src/gui/: ui.rs
ferie_walter_client/: Cargo.toml  index.html
ferie_walter_client/assets/: sw.js
ferie_walter_client/src/: control.rs  main.rs
ferie_walter_client/src/control/: load.rs
ferie_walter_client/src/gui/: ui.rs
server/: Cargo.toml
server/src/: entity.rs  main.rs  operazioni.rs
server/src/entity/: dipendente.rs
server/src/operazioni/: elenco.rs  hello_world.rs
src/: common.rs  control.rs  entity.rs  main.rs
src/control/: backend.rs  comandi.rs  date.rs
src/entity/: anno.rs  dipendenti.rs  errori.rs  mese.rs
src/gui/: ui.rs
