[package]
name = "ferie_walter"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.0"
eframe = "0.31.0"
egui_extras = "0.31.0"
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
egui_custom = {path = "../gestionale_ultimate/egui_custom"}
