[package]
name = "ferie_walter"
version = "0.1.0"
edition = "2024"
authors = ["giacomo.redjack@gmail.com", "icivixwalter@gmail.com"]

[dependencies]
eframe = { version = "0.32.0", features = ["persistence"] }
egui = "0.32.0"
log = "^0.4"
egui_extras = "0.32.0"
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
# egui_custom = {git = "https://github.com/redjack96/egui_custom", branch = "master", features = ["serde"]}
egui_custom = {path = "../egui_custom/egui_custom", features = ["serde"]}
chrono = "0.4.41"
parking_lot = "0.12.4"

# Dipendenza condizionale, solo per il target wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "^0.4"
web-sys = "^0.3"

# Dipendenza quando compili nativamente
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]