[workspace]
members = ["ferie_walter_client", "server"]
resolver = "3"

[workspace.dependencies]
eframe = "0.32.0"
egui="0.32.0"
egui_extras = "0.32.0"
egui_custom = {git = "https://github.com/redjack96/egui_custom", branch = "master", features = ["serde"]}
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"